--- a/client/app/offering/offering.html
+++ b/client/app/offering/offering.html
@@ -4,3 +4,6 @@
 <span class="text-center">{{checkinfo}}</span>
 <hr>
 <span class="text-center">{{check_mailing_instructions}}</span>
+<div style="width:200px;margin:0 auto">
+	<a href="/achauth" class="btn btn-primary">ACH auth</a>
+</div>
