--- a/client/index.html
+++ b/client/index.html
@@ -61,6 +61,8 @@
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
           <!-- injector:js -->
+          <script src="app/achauth/achauth.controller.js"></script>
+          <script src="app/achauth/achauth.js"></script>
           <script src="app/createoffering/createoffering.controller.js"></script>
           <script src="app/createoffering/createoffering.js"></script>
           <script src="app/escrowagreement/escrowagreement.controller.js"></script>
