routing_number->bank_info

--- a/client/index.html
+++ b/client/index.html
@@ -63,6 +63,8 @@
           <!-- injector:js -->
           <script src="app/achauth/achauth.controller.js"></script>
           <script src="app/achauth/achauth.js"></script>
+          <script src="app/bankinfo/bankinfo.controller.js"></script>
+          <script src="app/bankinfo/bankinfo.js"></script>
           <script src="app/createoffering/createoffering.controller.js"></script>
           <script src="app/createoffering/createoffering.js"></script>
           <script src="app/escrowagreement/escrowagreement.controller.js"></script>
