--- a/client/index.html
+++ b/client/index.html
@@ -69,6 +69,8 @@
           <script src="app/createoffering/createoffering.js"></script>
           <script src="app/escrowagreement/escrowagreement.controller.js"></script>
           <script src="app/escrowagreement/escrowagreement.js"></script>
+          <script src="app/escrowledger/escrowledger.controller.js"></script>
+          <script src="app/escrowledger/escrowledger.js"></script>
           <script src="app/factory/fa/fa.service.js"></script>
           <script src="app/kyc/kyc.controller.js"></script>
           <script src="app/kyc/kyc.js"></script>
@@ -76,6 +78,8 @@
           <script src="app/main/main.js"></script>
           <script src="app/offering/offering.controller.js"></script>
           <script src="app/offering/offering.js"></script>
+          <script src="app/calculator/calculator.controller.js"></script>
+          <script src="app/calculator/calculator.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <!-- endinjector -->
