--- a/client/app/calculator-revenue/calculator-revenue.html
+++ b/client/app/calculator-revenue/calculator-revenue.html
@@ -18,5 +18,7 @@
   </select>
   <input type="text" ng-model="calc.terms" class="form-control">
 </div>
-Payment = {{payment()}}
+Revenue = {{revenue()}}
+<hr>
+Profit = {{profit()}}
 </div>
