provide 'total principal paid' in the table

--- a/client/app/calculator-revenue/calculator-revenue.html
+++ b/client/app/calculator-revenue/calculator-revenue.html
@@ -38,6 +38,7 @@ Profit = {{profit()}}
         <th>Term Number</th>
         <th>Principal</th>
         <th>Interest</th>
+        <th>Total principal paid</th>
         <th>Balance</th>
       </tr>
     </thead>
@@ -46,6 +47,7 @@ Profit = {{profit()}}
         <td>{{row.termno}}</td>
         <td>{{row.principal}}</td>
         <td>{{row.interest}}</td>
+        <td>{{row.totalpaid}}</td>
         <td>{{row.balance}}</td>
       </tr>
     </tbody>
