--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,8 @@
       <script src="bower_components/angular-route/angular-route.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
+      <script src="bower_components/d3/d3.js"></script>
+      <script src="bower_components/d3-tip/index.js"></script>
 
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
